[package]
name = "glob-match-ultra"
description = "An extremely fast glob matcher"
version = "0.2.2"
license = "MIT"
authors = ["Devon Govett <devongovett@gmail.com>", "James Pike <github@chilon.net>"]
repository = "https://github.com/insidewhy/glob-match"
edition = "2021"

[dev-dependencies]
criterion = "0.4.0"
glob = "0.3.1"
globset = "0.4.10"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
